syntax = "proto3";

package BaseProto;

message BoolWrapper {
	bool value = 1;
}