syntax = "proto3";

package Dto;

message NoteDto {
  int32 id = 1;
  string to = 2;
  string from = 3;
  string message = 4;
  int64 timestamp = 5;
  int32 fame = 6;
  int32 fromId = 7;
}

message SendNoteResponse {
	int32 receiverId = 1;
	int32 receiverChannel = 2;
	repeated NoteDto list = 3;
}

message SendNormalNoteRequest {
	int32 fromId = 1;
	string toName = 2;
	string message = 3;
}

message SetNoteReadRequest {
	int32 id = 1;
}

message SetNoteReadResponse {
	NoteDto data = 1;
}