syntax = "proto3";

package ExpeditionProto;

message ExpeditionCheckRequest {
  int32 cid = 1;
  int32 channel = 2;
  string bossName = 3;
}

message ExpeditionCheckResponse {
	bool isSuccess = 1;
}