syntax = "proto3";

package ExpeditionProto;

message ExpeditionRegistry {
  repeated int32 cidList = 1;
  int32 channel = 2;
  string bossName = 3;
}
